# ncudio

./: README.md  flutter_jank_metrics_01.json  flutter_rust_bridge.yaml  pubspec.yaml
integration_test/: simple_test.dart
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  model.dart
lib/src/rust/api/: simple.dart  utils.dart
lib/src/rust/entity/: track.dart
lib/src/rust/model/: track.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: .env  Cargo.toml
native/migration/src/: lib.rs  m20240322_143522_create_general_tables.rs
native/migrations/2024-03-21-142926_create_track_table/: up.sql
native/migrations/2024-03-22-172042_create_table_album/: up.sql
native/migrations/2024-03-22-172045_create_table_artist/: up.sql
native/src/: frb_generated.rs  lib.rs  model.rs  schema.rs
native/src/api/: mod.rs  simple.rs  utils.rs
native/src/entity/: album.rs  artist.rs  mod.rs  prelude.rs  track.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_ncudio.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_ncudio.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
