[package]
name = "rust_lib_ncudio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.0.0-dev.28", features = ["chrono"] }

tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
chrono = { version = "0.4.35", features = ["serde"] }

diesel = { version = "2.1.5", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
jwalk = "0.8.1"
rayon = "1.9.0"
rfd = { version = "0.14.1", features = ["tokio", "gtk3"], default-features = false }
lofty = "0.18.2"
diesel-chrono-duration = "1.1.0"
fasthash = "0.4.0"
