[package]
name = "rust_lib_ncudio"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# entity = { path = "entity" }
migration = { path = "migration" }

flutter_rust_bridge = { version = "=2.0.0-dev.28", features = ["chrono"] }

tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
chrono = { version = "0.4.35", features = ["serde"] }

jwalk = "0.8.1"
rayon = "1.9.0"
rfd = { version = "0.14.1", features = [
  "tokio",
  "gtk3",
], default-features = false }
lofty = "0.18.2"
md5 = "0.7.0"
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "macros", "runtime-tokio"] }

[target.'cfg(unix)'.dependencies]
libsqlite3-sys = { version = ">=0.17.2, <0.29.0", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = ">=0.17.2, <0.29.0", features = [
  "bundled-windows",
] }
